- Moved to 1.21.1 (must use jar)[https://api.infernalsuite.com/v1/projects/asp/b7ed9f48-8785-4e26-97ca-f63915fc4ed2/download/d2618508-3d8f-4d56-8d86-ce625a45c81d] - Changed to gradle instead of maven (pretty easy to use I hope) - Added SlimeWorldManager/AdvancedSlimePaper - Using slimeworld instead of bukkit worlds.